# yt_transcribe

./: Makefile  README.md  pyproject.toml
src/: cli.py  core.py
