[project]
name = "yt_transcribe"
version = "1.0.0"
description = "YouTube → WAV → Whisper transcription"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.9.0",
    "ffmpeg>=1.4",
    "isort>=6.0.1",
    "openai-whisper>=20250625",
    "ruff>=0.13.1",
    "torch==2.5.0",
    "transformers>=4.56.2",
    "yt-dlp>=2025.9.5",
]

[project.scripts]
yt_transcribe = "cli:main"

[tool.uv]
package = true 
